--- a/db-course/Assignment7.ipynb
+++ b/db-course/Assignment7.ipynb
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1138,6 +1138,7 @@
        "            <th>email</th>\n",
        "            <th>office_code</th>\n",
        "            <th>job_title</th>\n",
+       "            <th>number_sales</th>\n",
        "            <th>total_sales</th>\n",
        "        </tr>\n",
        "    </thead>\n",
@@ -1152,6 +1153,7 @@
        "            <td>4</td>\n",
        "            <td>Sales Rep</td>\n",
        "            <td>127</td>\n",
+       "            <td>11149.47</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>2005</td>\n",
@@ -1163,17 +1165,7 @@
        "            <td>1</td>\n",
        "            <td>Sales Rep</td>\n",
        "            <td>96</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2005</td>\n",
-       "            <td>1501</td>\n",
-       "            <td>Bott</td>\n",
-       "            <td>Larry</td>\n",
-       "            <td>x2311</td>\n",
-       "            <td>lbott@classicmodelcars.com</td>\n",
-       "            <td>7</td>\n",
-       "            <td>Sales Rep</td>\n",
-       "            <td>47</td>\n",
+       "            <td>9137.12</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>2005</td>\n",
@@ -1185,37 +1177,51 @@
        "            <td>6</td>\n",
        "            <td>Sales Rep</td>\n",
        "            <td>47</td>\n",
+       "            <td>4229.77</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>2005</td>\n",
-       "            <td>1611</td>\n",
-       "            <td>Fixter</td>\n",
-       "            <td>Andy</td>\n",
-       "            <td>x101</td>\n",
-       "            <td>afixter@classicmodelcars.com</td>\n",
-       "            <td>6</td>\n",
+       "            <td>1501</td>\n",
+       "            <td>Bott</td>\n",
+       "            <td>Larry</td>\n",
+       "            <td>x2311</td>\n",
+       "            <td>lbott@classicmodelcars.com</td>\n",
+       "            <td>7</td>\n",
        "            <td>Sales Rep</td>\n",
-       "            <td>43</td>\n",
+       "            <td>47</td>\n",
+       "            <td>4099.64</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2005</td>\n",
+       "            <td>1401</td>\n",
+       "            <td>Castillo</td>\n",
+       "            <td>Pamela</td>\n",
+       "            <td>x2759</td>\n",
+       "            <td>pcastillo@classicmodelcars.com</td>\n",
+       "            <td>4</td>\n",
+       "            <td>Sales Rep</td>\n",
+       "            <td>42</td>\n",
+       "            <td>3974.08</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(2005, 1370, 'Hernandez', 'Gerard', 'x2028', 'ghernande@classicmodelcars.com', '4', 'Sales Rep', 127),\n",
-       " (2005, 1165, 'Jennings', 'Leslie', 'x3291', 'ljennings@classicmodelcars.com', '1', 'Sales Rep', 96),\n",
-       " (2005, 1501, 'Bott', 'Larry', 'x2311', 'lbott@classicmodelcars.com', '7', 'Sales Rep', 47),\n",
-       " (2005, 1612, 'Marsh', 'Peter', 'x102', 'pmarsh@classicmodelcars.com', '6', 'Sales Rep', 47),\n",
-       " (2005, 1611, 'Fixter', 'Andy', 'x101', 'afixter@classicmodelcars.com', '6', 'Sales Rep', 43)]"
+       "[(2005, 1370, 'Hernandez', 'Gerard', 'x2028', 'ghernande@classicmodelcars.com', '4', 'Sales Rep', 127, Decimal('11149.47')),\n",
+       " (2005, 1165, 'Jennings', 'Leslie', 'x3291', 'ljennings@classicmodelcars.com', '1', 'Sales Rep', 96, Decimal('9137.12')),\n",
+       " (2005, 1612, 'Marsh', 'Peter', 'x102', 'pmarsh@classicmodelcars.com', '6', 'Sales Rep', 47, Decimal('4229.77')),\n",
+       " (2005, 1501, 'Bott', 'Larry', 'x2311', 'lbott@classicmodelcars.com', '7', 'Sales Rep', 47, Decimal('4099.64')),\n",
+       " (2005, 1401, 'Castillo', 'Pamela', 'x2759', 'pcastillo@classicmodelcars.com', '4', 'Sales Rep', 42, Decimal('3974.08'))]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "select year(order_date) as current_year,r1.*,count(*) as total_sales from employee as r1 join customer as r2 on r1.employee_number=r2.sales_rep natural join `order` natural join order__item\n",
+    "select year(order_date) as current_year,r1.*,count(*) as number_sales,sum(price) as total_sales from employee as r1 join customer as r2 on r1.employee_number=r2.sales_rep natural join `order` natural join order__item\n",
     "where year(order_date)='2005'\n",
     "group by employee_number\n",
     "order by total_sales desc\n",
@@ -1328,9 +1334,7 @@
    ],
    "source": [
     "%%sql\n",
-    "    select *,year(order_date) as year_date,count(order_line_number) as total_sales\n",
-    "    from employee join customer on employee.employee_number=customer.sales_rep natural join `order` natural join order__item\n",
-    "  \n",
+    " \n",
     "\n"
    ]
   },
