--- a/db-course/Assignment7.ipynb
+++ b/db-course/Assignment7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1251,7 +1251,7 @@
        "[]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1410,15 +1410,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>year</th>\n",
+       "            <th>world_population</th>\n",
+       "            <th>world_gdp</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2018</td>\n",
+       "            <td>7358987174</td>\n",
+       "            <td>83590040156453</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2018, Decimal('7358987174'), Decimal('83590040156453'))]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT year,sum(population) as world_population,sum(gdp) as world_gdp from countries natural join country_stats\n",
+    "where year = 2018\n",
+    "\n"
    ]
   }
  ],
