--- a/db-course/Assignment7.ipynb
+++ b/db-course/Assignment7.ipynb
@@ -1460,6 +1460,418 @@
     "where year = 2018\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "59 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>year</th>\n",
+       "            <th>world_population</th>\n",
+       "            <th>world_gdp</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1960</td>\n",
+       "            <td>2317935992</td>\n",
+       "            <td>1118743000628</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1961</td>\n",
+       "            <td>2364378686</td>\n",
+       "            <td>1207075823880</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1962</td>\n",
+       "            <td>2425978014</td>\n",
+       "            <td>1320381474549</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1963</td>\n",
+       "            <td>2478302324</td>\n",
+       "            <td>1421729635563</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1964</td>\n",
+       "            <td>2530841994</td>\n",
+       "            <td>1557875653944</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1965</td>\n",
+       "            <td>2619235221</td>\n",
+       "            <td>1704098153376</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1966</td>\n",
+       "            <td>2678118313</td>\n",
+       "            <td>1848642377850</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1967</td>\n",
+       "            <td>2847925779</td>\n",
+       "            <td>1973083264695</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1968</td>\n",
+       "            <td>2924291903</td>\n",
+       "            <td>2135342222280</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1969</td>\n",
+       "            <td>2990391069</td>\n",
+       "            <td>2351180280031</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1970</td>\n",
+       "            <td>3139461718</td>\n",
+       "            <td>2780568237614</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1971</td>\n",
+       "            <td>3209458112</td>\n",
+       "            <td>3071111521053</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1972</td>\n",
+       "            <td>3277719452</td>\n",
+       "            <td>3541700567535</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1973</td>\n",
+       "            <td>3344977921</td>\n",
+       "            <td>4315738678586</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1974</td>\n",
+       "            <td>3413144617</td>\n",
+       "            <td>4975709725480</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1975</td>\n",
+       "            <td>3473151657</td>\n",
+       "            <td>5554874046743</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1976</td>\n",
+       "            <td>3538665123</td>\n",
+       "            <td>6042519670542</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1977</td>\n",
+       "            <td>3603682280</td>\n",
+       "            <td>6833786469960</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1978</td>\n",
+       "            <td>3669444092</td>\n",
+       "            <td>8044409572881</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1979</td>\n",
+       "            <td>3737233268</td>\n",
+       "            <td>9345097328096</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1980</td>\n",
+       "            <td>3843161694</td>\n",
+       "            <td>10678306772670</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1981</td>\n",
+       "            <td>3951076212</td>\n",
+       "            <td>11060513825737</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1982</td>\n",
+       "            <td>4012475269</td>\n",
+       "            <td>10953406180850</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1983</td>\n",
+       "            <td>4087352589</td>\n",
+       "            <td>11170875840453</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1984</td>\n",
+       "            <td>4167968266</td>\n",
+       "            <td>11581522639063</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1985</td>\n",
+       "            <td>4305105219</td>\n",
+       "            <td>12180861558858</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1986</td>\n",
+       "            <td>4390194090</td>\n",
+       "            <td>14392301386986</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1987</td>\n",
+       "            <td>4527437484</td>\n",
+       "            <td>16421120484297</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1988</td>\n",
+       "            <td>4784007462</td>\n",
+       "            <td>18927355419074</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1989</td>\n",
+       "            <td>4869147803</td>\n",
+       "            <td>19736253796020</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1990</td>\n",
+       "            <td>5099990281</td>\n",
+       "            <td>22505042391581</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1991</td>\n",
+       "            <td>5113413199</td>\n",
+       "            <td>23550852228522</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1992</td>\n",
+       "            <td>5196145005</td>\n",
+       "            <td>24972198267199</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1993</td>\n",
+       "            <td>5346893709</td>\n",
+       "            <td>25430442681870</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1994</td>\n",
+       "            <td>5434510824</td>\n",
+       "            <td>27314474000865</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1995</td>\n",
+       "            <td>5532734143</td>\n",
+       "            <td>30449041956687</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1996</td>\n",
+       "            <td>5612919077</td>\n",
+       "            <td>31114314300523</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1997</td>\n",
+       "            <td>5692833896</td>\n",
+       "            <td>30988159774617</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1998</td>\n",
+       "            <td>5771952429</td>\n",
+       "            <td>30943637387919</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1999</td>\n",
+       "            <td>5849873355</td>\n",
+       "            <td>32085437021961</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2000</td>\n",
+       "            <td>5976444543</td>\n",
+       "            <td>33128174554615</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2001</td>\n",
+       "            <td>6053326335</td>\n",
+       "            <td>32945078583978</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2002</td>\n",
+       "            <td>6153148211</td>\n",
+       "            <td>34223007114511</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2003</td>\n",
+       "            <td>6230854449</td>\n",
+       "            <td>38417526455764</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2004</td>\n",
+       "            <td>6335425713</td>\n",
+       "            <td>43303064427674</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2005</td>\n",
+       "            <td>6414923611</td>\n",
+       "            <td>46894074035954</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2006</td>\n",
+       "            <td>6495117831</td>\n",
+       "            <td>50830199606871</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2007</td>\n",
+       "            <td>6575930835</td>\n",
+       "            <td>57257797844936</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2008</td>\n",
+       "            <td>6637399750</td>\n",
+       "            <td>62791531544219</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2009</td>\n",
+       "            <td>6718797596</td>\n",
+       "            <td>59598461591794</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2010</td>\n",
+       "            <td>6800219142</td>\n",
+       "            <td>65238320326026</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2011</td>\n",
+       "            <td>6880852124</td>\n",
+       "            <td>72477162219588</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2012</td>\n",
+       "            <td>6960473984</td>\n",
+       "            <td>74175104239084</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2013</td>\n",
+       "            <td>7057590477</td>\n",
+       "            <td>76275187662055</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2014</td>\n",
+       "            <td>7142758940</td>\n",
+       "            <td>78346752313687</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2015</td>\n",
+       "            <td>7198017302</td>\n",
+       "            <td>73642726288557</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2016</td>\n",
+       "            <td>7284132239</td>\n",
+       "            <td>74726157289947</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2017</td>\n",
+       "            <td>7369605751</td>\n",
+       "            <td>79397294374660</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2018</td>\n",
+       "            <td>7358987174</td>\n",
+       "            <td>83590040156453</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1960, Decimal('2317935992'), Decimal('1118743000628')),\n",
+       " (1961, Decimal('2364378686'), Decimal('1207075823880')),\n",
+       " (1962, Decimal('2425978014'), Decimal('1320381474549')),\n",
+       " (1963, Decimal('2478302324'), Decimal('1421729635563')),\n",
+       " (1964, Decimal('2530841994'), Decimal('1557875653944')),\n",
+       " (1965, Decimal('2619235221'), Decimal('1704098153376')),\n",
+       " (1966, Decimal('2678118313'), Decimal('1848642377850')),\n",
+       " (1967, Decimal('2847925779'), Decimal('1973083264695')),\n",
+       " (1968, Decimal('2924291903'), Decimal('2135342222280')),\n",
+       " (1969, Decimal('2990391069'), Decimal('2351180280031')),\n",
+       " (1970, Decimal('3139461718'), Decimal('2780568237614')),\n",
+       " (1971, Decimal('3209458112'), Decimal('3071111521053')),\n",
+       " (1972, Decimal('3277719452'), Decimal('3541700567535')),\n",
+       " (1973, Decimal('3344977921'), Decimal('4315738678586')),\n",
+       " (1974, Decimal('3413144617'), Decimal('4975709725480')),\n",
+       " (1975, Decimal('3473151657'), Decimal('5554874046743')),\n",
+       " (1976, Decimal('3538665123'), Decimal('6042519670542')),\n",
+       " (1977, Decimal('3603682280'), Decimal('6833786469960')),\n",
+       " (1978, Decimal('3669444092'), Decimal('8044409572881')),\n",
+       " (1979, Decimal('3737233268'), Decimal('9345097328096')),\n",
+       " (1980, Decimal('3843161694'), Decimal('10678306772670')),\n",
+       " (1981, Decimal('3951076212'), Decimal('11060513825737')),\n",
+       " (1982, Decimal('4012475269'), Decimal('10953406180850')),\n",
+       " (1983, Decimal('4087352589'), Decimal('11170875840453')),\n",
+       " (1984, Decimal('4167968266'), Decimal('11581522639063')),\n",
+       " (1985, Decimal('4305105219'), Decimal('12180861558858')),\n",
+       " (1986, Decimal('4390194090'), Decimal('14392301386986')),\n",
+       " (1987, Decimal('4527437484'), Decimal('16421120484297')),\n",
+       " (1988, Decimal('4784007462'), Decimal('18927355419074')),\n",
+       " (1989, Decimal('4869147803'), Decimal('19736253796020')),\n",
+       " (1990, Decimal('5099990281'), Decimal('22505042391581')),\n",
+       " (1991, Decimal('5113413199'), Decimal('23550852228522')),\n",
+       " (1992, Decimal('5196145005'), Decimal('24972198267199')),\n",
+       " (1993, Decimal('5346893709'), Decimal('25430442681870')),\n",
+       " (1994, Decimal('5434510824'), Decimal('27314474000865')),\n",
+       " (1995, Decimal('5532734143'), Decimal('30449041956687')),\n",
+       " (1996, Decimal('5612919077'), Decimal('31114314300523')),\n",
+       " (1997, Decimal('5692833896'), Decimal('30988159774617')),\n",
+       " (1998, Decimal('5771952429'), Decimal('30943637387919')),\n",
+       " (1999, Decimal('5849873355'), Decimal('32085437021961')),\n",
+       " (2000, Decimal('5976444543'), Decimal('33128174554615')),\n",
+       " (2001, Decimal('6053326335'), Decimal('32945078583978')),\n",
+       " (2002, Decimal('6153148211'), Decimal('34223007114511')),\n",
+       " (2003, Decimal('6230854449'), Decimal('38417526455764')),\n",
+       " (2004, Decimal('6335425713'), Decimal('43303064427674')),\n",
+       " (2005, Decimal('6414923611'), Decimal('46894074035954')),\n",
+       " (2006, Decimal('6495117831'), Decimal('50830199606871')),\n",
+       " (2007, Decimal('6575930835'), Decimal('57257797844936')),\n",
+       " (2008, Decimal('6637399750'), Decimal('62791531544219')),\n",
+       " (2009, Decimal('6718797596'), Decimal('59598461591794')),\n",
+       " (2010, Decimal('6800219142'), Decimal('65238320326026')),\n",
+       " (2011, Decimal('6880852124'), Decimal('72477162219588')),\n",
+       " (2012, Decimal('6960473984'), Decimal('74175104239084')),\n",
+       " (2013, Decimal('7057590477'), Decimal('76275187662055')),\n",
+       " (2014, Decimal('7142758940'), Decimal('78346752313687')),\n",
+       " (2015, Decimal('7198017302'), Decimal('73642726288557')),\n",
+       " (2016, Decimal('7284132239'), Decimal('74726157289947')),\n",
+       " (2017, Decimal('7369605751'), Decimal('79397294374660')),\n",
+       " (2018, Decimal('7358987174'), Decimal('83590040156453'))]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT year,sum(population) as world_population,sum(gdp) as world_gdp from countries natural join country_stats\n",
+    "group by year\n",
+    "order by year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
