--- a/db-course/Assignment7.ipynb
+++ b/db-course/Assignment7.ipynb
@@ -1864,14 +1864,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>name</th>\n",
+       "            <th>total_gdp</th>\n",
+       "            <th>total_population</th>\n",
+       "            <th>year</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>North America</td>\n",
+       "            <td>23938266860018</td>\n",
+       "            <td>569629826</td>\n",
+       "            <td>2018</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Asia</td>\n",
+       "            <td>30583328167746</td>\n",
+       "            <td>4376908610</td>\n",
+       "            <td>2018</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Africa</td>\n",
+       "            <td>2335199629043</td>\n",
+       "            <td>1259761667</td>\n",
+       "            <td>2018</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Europe</td>\n",
+       "            <td>21568321521665</td>\n",
+       "            <td>717216719</td>\n",
+       "            <td>2018</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>South America</td>\n",
+       "            <td>3493964579536</td>\n",
+       "            <td>394528800</td>\n",
+       "            <td>2018</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Oceania</td>\n",
+       "            <td>1670959398445</td>\n",
+       "            <td>40941552</td>\n",
+       "            <td>2018</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('North America', Decimal('23938266860018'), Decimal('569629826'), 2018),\n",
+       " ('Asia', Decimal('30583328167746'), Decimal('4376908610'), 2018),\n",
+       " ('Africa', Decimal('2335199629043'), Decimal('1259761667'), 2018),\n",
+       " ('Europe', Decimal('21568321521665'), Decimal('717216719'), 2018),\n",
+       " ('South America', Decimal('3493964579536'), Decimal('394528800'), 2018),\n",
+       " ('Oceania', Decimal('1670959398445'), Decimal('40941552'), 2018)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT continents.name,sum(gdp)as total_gdp, sum(population) as total_population,year FROM continents join regions using(continent_id) join countries using(region_id) natural join country_stats\n",
+    "WHERE year=2018 \n",
+    "group by continent_id\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "7 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>continent_id</th>\n",
+       "            <th>name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>North America</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>Asia</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>Africa</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>Europe</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>South America</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>Oceania</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>Antarctica</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'North America'),\n",
+       " (2, 'Asia'),\n",
+       " (3, 'Africa'),\n",
+       " (4, 'Europe'),\n",
+       " (5, 'South America'),\n",
+       " (6, 'Oceania'),\n",
+       " (7, 'Antarctica')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select* from continents"
+   ]
   }
  ],
  "metadata": {
