--- a/db-course/Assignment7.ipynb
+++ b/db-course/Assignment7.ipynb
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1326,7 +1326,7 @@
        " ('regions',)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1966,7 +1966,7 @@
      "output_type": "stream",
      "text": [
       " * mysql://root:***@127.0.0.1\n",
-      "7 rows affected.\n"
+      "2 rows affected.\n"
      ]
     },
     {
@@ -1975,60 +1975,56 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>continent_id</th>\n",
        "            <th>name</th>\n",
+       "            <th>population</th>\n",
+       "            <th>continent</th>\n",
+       "            <th>year</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>1</td>\n",
-       "            <td>North America</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2</td>\n",
-       "            <td>Asia</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>3</td>\n",
+       "            <td>Ethiopia</td>\n",
+       "            <td>109224559</td>\n",
        "            <td>Africa</td>\n",
+       "            <td>2018</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>4</td>\n",
-       "            <td>Europe</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>5</td>\n",
-       "            <td>South America</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>6</td>\n",
-       "            <td>Oceania</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>7</td>\n",
-       "            <td>Antarctica</td>\n",
+       "            <td>Nigeria</td>\n",
+       "            <td>195874740</td>\n",
+       "            <td>Africa</td>\n",
+       "            <td>2018</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(1, 'North America'),\n",
-       " (2, 'Asia'),\n",
-       " (3, 'Africa'),\n",
-       " (4, 'Europe'),\n",
-       " (5, 'South America'),\n",
-       " (6, 'Oceania'),\n",
-       " (7, 'Antarctica')]"
+       "[('Ethiopia', 109224559, 'Africa', 2018),\n",
+       " ('Nigeria', 195874740, 'Africa', 2018)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "select* from continents"
+    "SELECT countries.name,population,continents.name as continent,year FROM continents join regions using(continent_id) join countries using(region_id) natural join country_stats\n",
+    "WHERE year=2018 and continents.name=\"Africa\"\n",
+    "having population>100000000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n"
    ]
   }
  ],
