--- a/db-course/Assignment7.ipynb
+++ b/db-course/Assignment7.ipynb
@@ -2016,6 +2016,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "use university"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "11 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Tables_in_university</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>course</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>current_term</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>department</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>enroll</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>grade</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>letter_grade</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>section</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>student</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>student_major</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>term</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>~log</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('course',),\n",
+       " ('current_term',),\n",
+       " ('department',),\n",
+       " ('enroll',),\n",
+       " ('grade',),\n",
+       " ('letter_grade',),\n",
+       " ('section',),\n",
+       " ('student',),\n",
+       " ('student_major',),\n",
+       " ('term',),\n",
+       " ('~log',)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "show tables"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
@@ -2023,9 +2143,18 @@
     }
    },
    "outputs": [],
-   "source": [
-    "%%sql\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
