--- a/db-course/Assignment7.ipynb
+++ b/db-course/Assignment7.ipynb
@@ -2736,6 +2736,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>product_code</th>\n",
+       "            <th>product_name</th>\n",
+       "            <th>product_line</th>\n",
+       "            <th>product_scale</th>\n",
+       "            <th>vendor</th>\n",
+       "            <th>product_description</th>\n",
+       "            <th>quantity_in_stock</th>\n",
+       "            <th>buy_price</th>\n",
+       "            <th>MSRP</th>\n",
+       "            <th>total_sales_dollars</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>S18_3232</td>\n",
+       "            <td>1992 Ferrari 360 Spider red</td>\n",
+       "            <td>Classic Cars</td>\n",
+       "            <td>1:18</td>\n",
+       "            <td>Unimax Art Galleries</td>\n",
+       "            <td>his replica features opening doors, superb detail and craftsmanship, working steering system, opening forward compartment, opening rear trunk with removable spare, 4 wheel independent spring suspension as well as factory baked enamel finish.</td>\n",
+       "            <td>8347</td>\n",
+       "            <td>77.90</td>\n",
+       "            <td>169.34</td>\n",
+       "            <td>8074.17</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S10_1949</td>\n",
+       "            <td>1952 Alpine Renault 1300</td>\n",
+       "            <td>Classic Cars</td>\n",
+       "            <td>1:10</td>\n",
+       "            <td>Classic Metal Creations</td>\n",
+       "            <td>Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.</td>\n",
+       "            <td>7305</td>\n",
+       "            <td>98.58</td>\n",
+       "            <td>214.30</td>\n",
+       "            <td>5524.66</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S12_1108</td>\n",
+       "            <td>2001 Ferrari Enzo</td>\n",
+       "            <td>Classic Cars</td>\n",
+       "            <td>1:12</td>\n",
+       "            <td>Second Gear Diecast</td>\n",
+       "            <td>Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.</td>\n",
+       "            <td>3619</td>\n",
+       "            <td>95.59</td>\n",
+       "            <td>207.80</td>\n",
+       "            <td>5051.61</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S10_4698</td>\n",
+       "            <td>2003 Harley-Davidson Eagle Drag Bike</td>\n",
+       "            <td>Motorcycles</td>\n",
+       "            <td>1:10</td>\n",
+       "            <td>Red Start Diecast</td>\n",
+       "            <td>Model features, official Harley Davidson logos and insignias, detachable rear wheelie bar, heavy diecast metal with resin parts, authentic multi-color tampo-printed graphics, separate engine drive belts, free-turning front fork, rotating tires and rear racing slick, certificate of authenticity, detailed engine, display stand\r<br>, precision diecast replica, baked enamel finish, 1:10 scale model, removable fender, seat and tank cover piece for displaying the superior detail of the v-twin engine</td>\n",
+       "            <td>5582</td>\n",
+       "            <td>91.02</td>\n",
+       "            <td>193.66</td>\n",
+       "            <td>4824.07</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S12_1099</td>\n",
+       "            <td>1968 Ford Mustang</td>\n",
+       "            <td>Classic Cars</td>\n",
+       "            <td>1:12</td>\n",
+       "            <td>Autoart Studio Design</td>\n",
+       "            <td>Hood, doors and trunk all open to reveal highly detailed interior features. Steering wheel actually turns the front wheels. Color dark green.</td>\n",
+       "            <td>68</td>\n",
+       "            <td>95.34</td>\n",
+       "            <td>194.57</td>\n",
+       "            <td>4656.05</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('S18_3232', '1992 Ferrari 360 Spider red', 'Classic Cars', '1:18', 'Unimax Art Galleries', 'his replica features opening doors, superb detail and craftsmanship, working steering system, opening forward compartment, opening rear trunk with removable spare, 4 wheel independent spring suspension as well as factory baked enamel finish.', 8347, Decimal('77.90'), Decimal('169.34'), Decimal('8074.17')),\n",
+       " ('S10_1949', '1952 Alpine Renault 1300', 'Classic Cars', '1:10', 'Classic Metal Creations', 'Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.', 7305, Decimal('98.58'), Decimal('214.30'), Decimal('5524.66')),\n",
+       " ('S12_1108', '2001 Ferrari Enzo', 'Classic Cars', '1:12', 'Second Gear Diecast', 'Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.', 3619, Decimal('95.59'), Decimal('207.80'), Decimal('5051.61')),\n",
+       " ('S10_4698', '2003 Harley-Davidson Eagle Drag Bike', 'Motorcycles', '1:10', 'Red Start Diecast', 'Model features, official Harley Davidson logos and insignias, detachable rear wheelie bar, heavy diecast metal with resin parts, authentic multi-colo ... (199 characters truncated) ... t replica, baked enamel finish, 1:10 scale model, removable fender, seat and tank cover piece for displaying the superior detail of the v-twin engine', 5582, Decimal('91.02'), Decimal('193.66'), Decimal('4824.07')),\n",
+       " ('S12_1099', '1968 Ford Mustang', 'Classic Cars', '1:12', 'Autoart Studio Design', 'Hood, doors and trunk all open to reveal highly detailed interior features. Steering wheel actually turns the front wheels. Color dark green.', 68, Decimal('95.34'), Decimal('194.57'), Decimal('4656.05'))]"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select product.*, sum(price) as total_sales_dollars from  product natural join order__item\n",
+    "group by product_code\n",
+    "order by total_sales_dollars desc\n",
+    "limit 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
@@ -2744,8 +2864,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql\n",
-    "select "
+    "%%sql\n"
    ]
   }
  ],
