--- a/db-course/Assignment7.ipynb
+++ b/db-course/Assignment7.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 133,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -543,14 +543,14 @@
        " (1625, 'Kato', 'Yoshimi', 'x102', 'ykato@classicmodelcars.com', '5', 'Sales Rep', 1)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT p1.*,count(*) as number_of_direct_reports FROM employee as p1 join report\n",
+    "SELECT p1.*,count(report.reports_to) as number_of_direct_reports FROM employee as p1 join report\n",
     "join employee as p2 on p1.employee_number=report.employee_number and p2.employee_number=report.reports_to\n",
     "group by p1.employee_number,report.reports_to"
    ]
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 134,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1018,7 +1018,7 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 135,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2450,7 +2450,7 @@
        "[]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2462,7 +2462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 137,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2609,14 +2609,14 @@
        " ('Eastern Africa', Decimal('945.5000'))]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT regions.name, sum(gdp) / sum(population) as gdp_per_capita \n",
+    "SELECT regions.name, sum(gdp)/ sum(population) as gdp_per_capita \n",
     "FROM regions JOIN countries using (region_id) NATURAL JOIN country_stats \n",
     "WHERE year=2018 GROUP BY region_id\n",
     "ORDER BY gdp_per_capita DESC"
@@ -2624,7 +2624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 146,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2645,7 +2645,7 @@
        "[]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2736,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 167,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2766,6 +2766,7 @@
        "            <th>quantity_in_stock</th>\n",
        "            <th>buy_price</th>\n",
        "            <th>MSRP</th>\n",
+       "            <th>total_sales</th>\n",
        "            <th>total_sales_dollars</th>\n",
        "        </tr>\n",
        "    </thead>\n",
@@ -2780,19 +2781,8 @@
        "            <td>8347</td>\n",
        "            <td>77.90</td>\n",
        "            <td>169.34</td>\n",
-       "            <td>8074.17</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>S10_1949</td>\n",
-       "            <td>1952 Alpine Renault 1300</td>\n",
-       "            <td>Classic Cars</td>\n",
-       "            <td>1:10</td>\n",
-       "            <td>Classic Metal Creations</td>\n",
-       "            <td>Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.</td>\n",
-       "            <td>7305</td>\n",
-       "            <td>98.58</td>\n",
-       "            <td>214.30</td>\n",
-       "            <td>5524.66</td>\n",
+       "            <td>276839.98</td>\n",
+       "            <td>$276,840</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>S12_1108</td>\n",
@@ -2804,7 +2794,21 @@
        "            <td>3619</td>\n",
        "            <td>95.59</td>\n",
        "            <td>207.80</td>\n",
-       "            <td>5051.61</td>\n",
+       "            <td>190755.86</td>\n",
+       "            <td>$190,756</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S10_1949</td>\n",
+       "            <td>1952 Alpine Renault 1300</td>\n",
+       "            <td>Classic Cars</td>\n",
+       "            <td>1:10</td>\n",
+       "            <td>Classic Metal Creations</td>\n",
+       "            <td>Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.</td>\n",
+       "            <td>7305</td>\n",
+       "            <td>98.58</td>\n",
+       "            <td>214.30</td>\n",
+       "            <td>190017.96</td>\n",
+       "            <td>$190,018</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>S10_4698</td>\n",
@@ -2816,7 +2820,8 @@
        "            <td>5582</td>\n",
        "            <td>91.02</td>\n",
        "            <td>193.66</td>\n",
-       "            <td>4824.07</td>\n",
+       "            <td>170686.00</td>\n",
+       "            <td>$170,686</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>S12_1099</td>\n",
@@ -2828,29 +2833,30 @@
        "            <td>68</td>\n",
        "            <td>95.34</td>\n",
        "            <td>194.57</td>\n",
-       "            <td>4656.05</td>\n",
+       "            <td>161531.48</td>\n",
+       "            <td>$161,531</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('S18_3232', '1992 Ferrari 360 Spider red', 'Classic Cars', '1:18', 'Unimax Art Galleries', 'his replica features opening doors, superb detail and craftsmanship, working steering system, opening forward compartment, opening rear trunk with removable spare, 4 wheel independent spring suspension as well as factory baked enamel finish.', 8347, Decimal('77.90'), Decimal('169.34'), Decimal('8074.17')),\n",
-       " ('S10_1949', '1952 Alpine Renault 1300', 'Classic Cars', '1:10', 'Classic Metal Creations', 'Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.', 7305, Decimal('98.58'), Decimal('214.30'), Decimal('5524.66')),\n",
-       " ('S12_1108', '2001 Ferrari Enzo', 'Classic Cars', '1:12', 'Second Gear Diecast', 'Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.', 3619, Decimal('95.59'), Decimal('207.80'), Decimal('5051.61')),\n",
-       " ('S10_4698', '2003 Harley-Davidson Eagle Drag Bike', 'Motorcycles', '1:10', 'Red Start Diecast', 'Model features, official Harley Davidson logos and insignias, detachable rear wheelie bar, heavy diecast metal with resin parts, authentic multi-colo ... (199 characters truncated) ... t replica, baked enamel finish, 1:10 scale model, removable fender, seat and tank cover piece for displaying the superior detail of the v-twin engine', 5582, Decimal('91.02'), Decimal('193.66'), Decimal('4824.07')),\n",
-       " ('S12_1099', '1968 Ford Mustang', 'Classic Cars', '1:12', 'Autoart Studio Design', 'Hood, doors and trunk all open to reveal highly detailed interior features. Steering wheel actually turns the front wheels. Color dark green.', 68, Decimal('95.34'), Decimal('194.57'), Decimal('4656.05'))]"
+       "[('S18_3232', '1992 Ferrari 360 Spider red', 'Classic Cars', '1:18', 'Unimax Art Galleries', 'his replica features opening doors, superb detail and craftsmanship, working steering system, opening forward compartment, opening rear trunk with removable spare, 4 wheel independent spring suspension as well as factory baked enamel finish.', 8347, Decimal('77.90'), Decimal('169.34'), Decimal('276839.98'), '$276,840'),\n",
+       " ('S12_1108', '2001 Ferrari Enzo', 'Classic Cars', '1:12', 'Second Gear Diecast', 'Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.', 3619, Decimal('95.59'), Decimal('207.80'), Decimal('190755.86'), '$190,756'),\n",
+       " ('S10_1949', '1952 Alpine Renault 1300', 'Classic Cars', '1:10', 'Classic Metal Creations', 'Turnable front wheels; steering function; detailed interior; detailed engine; opening hood; opening trunk; opening doors; and detailed chassis.', 7305, Decimal('98.58'), Decimal('214.30'), Decimal('190017.96'), '$190,018'),\n",
+       " ('S10_4698', '2003 Harley-Davidson Eagle Drag Bike', 'Motorcycles', '1:10', 'Red Start Diecast', 'Model features, official Harley Davidson logos and insignias, detachable rear wheelie bar, heavy diecast metal with resin parts, authentic multi-colo ... (199 characters truncated) ... t replica, baked enamel finish, 1:10 scale model, removable fender, seat and tank cover piece for displaying the superior detail of the v-twin engine', 5582, Decimal('91.02'), Decimal('193.66'), Decimal('170686.00'), '$170,686'),\n",
+       " ('S12_1099', '1968 Ford Mustang', 'Classic Cars', '1:12', 'Autoart Studio Design', 'Hood, doors and trunk all open to reveal highly detailed interior features. Steering wheel actually turns the front wheels. Color dark green.', 68, Decimal('95.34'), Decimal('194.57'), Decimal('161531.48'), '$161,531')]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "select product.*, sum(price) as total_sales_dollars from  product natural join order__item\n",
+    "select w.*,CONCAT('$',format(total_sales,'C')) as total_sales_dollars from (select product.*, sum(price*quantity) total_sales from  product natural join order__item\n",
     "group by product_code\n",
-    "order by total_sales_dollars desc\n",
+    "order by total_sales desc) as w\n",
     "limit 5"
    ]
   },
@@ -3046,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 139,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -3067,7 +3073,7 @@
        "[]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3304,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 145,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -3457,7 +3463,7 @@
        " (2018, 'MATH', 744)]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
